plans section add

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="img/nike.png">
 
     <title>Nike training</title>
 </head>
@@ -26,7 +26,7 @@
                 <span class="heading-primary--sub">traning</span>
             </h1>
 
-            <a href="#" class="btn btn--white btn--animated">Discover the plans</a>
+            <a href="#" class="btn btn--white btn--animated">Check out the plans</a>
         </div>
     </header>
 
@@ -99,6 +99,80 @@
                     <p class="feature-box__text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eveniet in fugit est tenetur soluta tempore.
                     </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                What goal do you want to achieve?
+            </h2>
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--1">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--1">
+                                Easy
+                            </span>
+                        </h4>
+                        <div class="card__details">
+                            Details
+                        </div>
+                    </div>
+
+                    <div class="card__side card__side--back card__side--back-1">
+                        DETAILS
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--2">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--2">
+                                Medium
+                            </span>
+                        </h4>
+                        <div class="card__details">
+                            Details
+                        </div>
+                    </div>
+                    
+                    <div class="card__side card__side--back card__side--back-2">
+                        DETAILS
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--3">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--3">
+                                Hard
+                            </span>
+                        </h4>
+                        <div class="card__details">
+                            Details
+                        </div>
+                    </div>
+                    
+                    <div class="card__side card__side--back card__side--back-3">
+                        DETAILS
+                    </div>
                 </div>
             </div>
         </div>
