finishing front page of plan's section

--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
                             </span>
                         </h4>
                         <div class="card__details">
-                            Details
+                            <ul>
+                                <li>2 training per week</li>
+                                <li>15 mins per training</li>
+                                <li>Home/Outside/Gym</li>
+                                <li>No equipement</li>
+                            </ul>
                         </div>
                     </div>
 
@@ -145,7 +150,12 @@
                             </span>
                         </h4>
                         <div class="card__details">
-                            Details
+                            <ul>
+                                <li>3/4 training per week</li>
+                                <li>30 mins per training</li>
+                                <li>Outside/Gym</li>
+                                <li>Optional</li>
+                            </ul>
                         </div>
                     </div>
                     
@@ -166,7 +176,12 @@
                             </span>
                         </h4>
                         <div class="card__details">
-                            Details
+                            <ul>
+                                <li>4/6 training per week</li>
+                                <li>50 mins per training</li>
+                                <li>Gym</li>
+                                <li>Equipement require</li>
+                            </ul>
                         </div>
                     </div>
                     
