fix little details

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="header__text-box">
             <h1 class="heading-primary">
                 <span class="heading-primary--main">Nike</span>
-                <span class="heading-primary--sub">traning</span>
+                <span class="heading-primary--sub">training</span>
             </h1>
 
             <a href="#" class="btn btn--white btn--animated">Check out the plans</a>
@@ -180,7 +180,7 @@
                                 <li>4/6 training per week</li>
                                 <li>50 mins per training</li>
                                 <li>Gym</li>
-                                <li>Equipement require</li>
+                                <li>Equipement required</li>
                             </ul>
                         </div>
                     </div>
