polishing features-section

--- a/index.html
+++ b/index.html
@@ -134,7 +134,13 @@
                     </div>
 
                     <div class="card__side card__side--back card__side--back-1">
-                        DETAILS
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">12$/month</p>
+                            </div>
+                            <a href="#" class="btn btn--white">Select</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -160,7 +166,13 @@
                     </div>
                     
                     <div class="card__side card__side--back card__side--back-2">
-                        DETAILS
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">20$/month</p>
+                            </div>
+                            <a href="#" class="btn btn--white">Select</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -186,10 +198,20 @@
                     </div>
                     
                     <div class="card__side card__side--back card__side--back-3">
-                        DETAILS
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">30$/month</p>
+                            </div>
+                            <a href="#" class="btn btn--white">Select</a>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+            <a href="#" class="btn btn--grey">Check out all the plans</a>
         </div>
     </section>
 </main>
