adding testimonials section

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
         <div class="row">
             <div class="col-1-of-2">
-                <h3 class="heading-tertianary u-margin-bottom-small">You're going to like sweating</h3>
+                <h3 class="heading-tertiary u-margin-bottom-small">You're going to like sweating</h3>
                 <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eveniet in fugit est tenetur soluta tempore dolorem. Corporis autem ipsa aut eligendi possimus. Iusto numquam assumenda magni dolores suscipit nesciunt.
                 </p>
 
-                <h3 class="heading-tertianary u-margin-bottom-small">Workout like you never have before</h3>
+                <h3 class="heading-tertiary u-margin-bottom-small">Workout like you never have before</h3>
                 <p class="paragraph">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto praesentium laborum totam vel quaerat velit minima at nostrum expedita quisquam.
                 </p>
@@ -65,7 +65,7 @@
             <div class="col-1-of-4">
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-alarm"></i>
-                    <h3 class="heading-tertianary u-margin-bottom-small">Stop wasting time</h3>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Stop wasting time</h3>
                     <p class="feature-box__text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eveniet in fugit est tenetur soluta tempore.
                     </p>
@@ -75,7 +75,7 @@
             <div class="col-1-of-4">
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-battery-charge"></i>
-                    <h3 class="heading-tertianary u-margin-bottom-small">Charge yourself</h3>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Charge yourself</h3>
                     <p class="feature-box__text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eveniet in fugit est tenetur soluta tempore.
                     </p>
@@ -85,7 +85,7 @@
             <div class="col-1-of-4">
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-target"></i>
-                    <h3 class="heading-tertianary u-margin-bottom-small">Achieve your goal</h3>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Achieve your goal</h3>
                     <p class="feature-box__text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eveniet in fugit est tenetur soluta tempore.
                     </p>
@@ -95,7 +95,7 @@
             <div class="col-1-of-4">
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-world"></i>
-                    <h3 class="heading-tertianary u-margin-bottom-small">Anywhere you want</h3>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Anywhere you want</h3>
                     <p class="feature-box__text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eveniet in fugit est tenetur soluta tempore.
                     </p>
@@ -212,6 +212,55 @@
 
         <div class="u-center-text u-margin-top-huge">
             <a href="#" class="btn btn--grey">Check out all the plans</a>
+        </div>
+    </section>
+
+    <section class="section-stories">
+        <div class="bg-video">
+            <video class="bg-video__content" autoplay muted loop>
+                <source src="img/ny-cover.mp4" type="video/mp4">
+                    Browser not supported
+            </video>
+        </div>
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                We make people genuinely happy
+            </h2>
+        </div>
+
+        <div class="row">
+            <div class="story">
+                <figure class="story__shape">
+                    <img src="img/tesimonial-1.jpg" alt="First testimonial" class="story__img">
+                    <figcaption class="story__caption">Eddie Alvarez</figcaption>
+                </figure>
+                <div class="story__text">
+                    <h3 class="heading-tertiary u-margin-bottom-small"><i>"I have never felt so in good shape in my life"</i></h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eveniet in fugit est tenetur soluta tempore dolorem.Corporis autem ipsa aut eligendi possimus. Iusto numquam assumenda magni dolores suscipit.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="story">
+                <figure class="story__shape">
+                    <img src="img/tesimonial-2.jpg" alt="First testimonial" class="story__img">
+                    <figcaption class="story__caption">Marla Saint</figcaption>
+                </figure>
+                <div class="story__text">
+                    <h3 class="heading-tertiary u-margin-bottom-small"><i>"I feel healthier than ever"</i></h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eveniet in fugit est tenetur soluta tempore
+                        dolorem.Corporis autem ipsa aut eligendi possimus. Iusto numquam assumenda magni dolores suscipit.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+            <a href="#" class="btn-text">Read all testimonials &rarr;</a>
         </div>
     </section>
 </main>
