--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <section class="section-stories">
         <div class="bg-video">
             <video class="bg-video__content" autoplay muted loop>
-                <source src="img/ny-cover.mp4" type="video/mp4">
+                <source src="img/Slowmo-Basket.mp4" type="video/mp4">
                     Browser not supported
             </video>
         </div>
@@ -263,7 +263,86 @@
             <a href="#" class="btn-text">Read all testimonials &rarr;</a>
         </div>
     </section>
+
+    <section class="section-book">
+        <div class="row">
+            <div class="book">
+                <div class="book__form">
+                    <form action="#" class="form" autocomplete="off">
+                        <div class="u-center-text u-margin-bottom-medium">
+                            <h2 class="heading-secondary">
+                                Sign up now!
+                            </h2>
+                        </div>
+                        <div class="form__group">
+                            <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                            <label for="name" class="form__label">Full name</label>
+                        </div>
+
+                        <div class="form__group">
+                            <input type="email" class="form__input" placeholder="Email" id="email" required>
+                            <label for="email" class="form__label">Email</label>
+                        </div>
+
+                        <div class="form__group">
+                            <div class="form__radio-group">
+                                <input type="radio" class="form__radio-input" id="easy" name="intensity">
+                                <label for="easy" class="form__radio-label">
+                                    <span class="form__radio-button"></span>
+                                    Easy
+                                </label>
+                            </div>
+                            <div class="form__radio-group">
+                                <input type="radio" class="form__radio-input" id="medium" name="intensity">
+                                <label for="medium" class="form__radio-label">
+                                    <span class="form__radio-button"></span>
+                                    Medium
+                                </label>
+                            </div>
+                            <div class="form__radio-group u-margin-bottom-small-2">
+                                <input type="radio" class="form__radio-input" id="hard" name="intensity">
+                                <label for="hard" class="form__radio-label">
+                                    <span class="form__radio-button"></span>
+                                    Hard
+                                </label>
+                            </div>
+                            <div class="form__group">
+                                <button class="btn btn--grey">
+                                    Next step &rarr;
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </main>
+
+<footer class="footer">
+    <div class="footer__logo-box">
+        <img src="img/nike.png" alt="Logo" class="footer__logo">
+    </div>
+    <div class="row">
+        <div class="col-1-of-2">
+            <div class="footer__navigation">
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-1-of-2">
+            <p class="footer__copyright">
+                Built by <a href="#" class="footer__link">Billy Trang</a> for practicing purpose with advanced CSS and SASS.
+            </p>
+        </div>
+    </div>
+</footer>
 
 <!--
 <section class="grid-test">
